Set data sources

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-spring.h2.console.enabled=true
+##spring.h2.console.enabled=true
 ##hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.datasource.url = jdbc:h2:mem:test
-spring.batch.initialize-schema=always
-ddl-auto=create-drop
+##spring.datasource.url = jdbc:h2:mem:test
+##spring.batch.initialize-schema=always
+##ddl-auto=create-drop
 
 server.port = 8050
 spring.application.name = hotel-reservation-service
+
+spring.datasource.url=jdbc:mysql://localhost:3306/hotel_reservations_test?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=justyna
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
