--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,10 @@
 applications:
   - name: hotel-reservation-service
-    memory: 512M
+    memory: 800M
     instances: 1
     path: target/hotel-reservation-jb-0.0.1-SNAPSHOT.jar
-    buildpack: https://github.com/cloudfoundry/java-buildpack
+    buildpacks:
+      - https://github.com/cloudfoundry/java-buildpack.git#v4.26
     env:
-      SPRING_PROFILES_ACTIVE: development
+      SPRING_PROFILES_ACTIVE : development
+      JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+}}'
