--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@
 server.port = 8050
 spring.application.name = hotel-reservation-service
 
-eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone = https://eureka-server-test.cfapps.io/eureka/
+eureka.client.register-with-eureka=false
